--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Default Starter</title>
     <!-- normalize css -->
     <link rel="stylesheet" href="normalize.css" />
+    <!-- font-awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
     <!-- main css -->
     <link rel="stylesheet" href="style.css" />
   </head>
